--- a/.github/workflows/gen_sitemap.yml
+++ b/.github/workflows/gen_sitemap.yml
@@ -19,7 +19,8 @@ jobs:
       id: sitemap
       uses: cicirello/generate-sitemap@v1
       with:
-        base-url-path: https://alexandermisel.github.io/blog/
+        base-url-path: https://alexandermisel.github.io/
+        path-to-root: blog
 
     - name: Output stats
       run: |
