--- a/.github/workflows/gen_sitemap.yml
+++ b/.github/workflows/gen_sitemap.yml
@@ -3,6 +3,7 @@ name: Generate xml sitemap
 on:
   push:
     branches: [ gh-pages ]
+    paths: [ '**.html' ]
 
 jobs:
   sitemap_job:
@@ -26,3 +27,17 @@ jobs:
         echo "sitemap-path = ${{ steps.sitemap.outputs.sitemap-path }}"
         echo "url-count = ${{ steps.sitemap.outputs.url-count }}"
         echo "excluded-count = ${{ steps.sitemap.outputs.excluded-count }}"
+  
+    - name: Create Pull Request
+      uses: peter-evans/create-pull-request@v3.10.0
+      with:
+        title: "Automated sitemap update"
+        body: > 
+          Automated changes. Sitemap updated by 
+          the [generate-sitemap](https://github.com/cicirello/generate-sitemap) 
+          GitHub action.  
+        commit-message: "Automated sitemap update."
+        author: AlexanderMisel <7542439+AlexanderMisel@users.noreply.github.com>
+        committer: AlexanderMisel <7542439+AlexanderMisel@users.noreply.github.com>
+        branch: create-pull-request/sitemap
+        delete-branch: true
